[package]
name = "rsdsl_netlinklib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.11", default-features = false, features = ["std"] }
ipnet = "2.9.0"
libc = "0.2.150"
netlink-packet-route = "^0.17"
rtnetlink = { version = "0.13.1" }
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.0"
