[package]
name = "rsdsl_netlinklib"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.11", default-features = false, features = ["std"] }
libc = "0.2.150"
netlink-packet-route = "^0.17"
rtnetlink = { version = "0.13.1" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }

[features]
default = ["addr", "link", "route"]
addr = []
link = ["status"]
route = []
tunnel = []
status = []
blocking = ["tokio/rt-multi-thread"]
