[package]
name = "rsdsl_netlinklib"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.11", default-features = false, features = ["std"] }
libc = "0.2.150"
netlink-packet-route = "^0.19"
netlink-proto = "^0.11"
rtnetlink = { version = "0.14.1" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }

[features]
default = ["addr", "link", "route"]
addr = []
link = ["status"]
route = []
rule = []
tunnel = []
status = []
blocking = ["tokio/rt-multi-thread"]
